--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,6 +4,6 @@
 	<meta name="author" content="Daniel Gray" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>The Cave of Daniel the Gray</title>
-	<link rel="shortcut icon" href="favicon.ico" />:q
+	<link rel="shortcut icon" href="favicon.ico" />
 	<link rel="stylesheet" href="css/style.css" />
 </head>
