--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,6 @@
 	display:block;
 	background-image:url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' version='1.1' height='10pt' width='5pt'><text x='0' y='10' fill='black' font-size='10'>=</text></svg>");
 	background-repeat: repeat-x;
-	height:10pt;
+	height:2em;
 	width: 100%;
 }
