--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
 <div class="header">
-	<span class="main-title">The cave of Daniel the Gray</span>
+	<div class="main-title">The cave of Daniel the Gray</div>
 	(nothing to hack here)
 	<div class="link">
 		<a href="cv">$ whoami</a><br/>
