More aesthetic adjustments

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,4 +6,5 @@
 	<title>The Cave of Daniel the Gray</title>
 	<link rel="shortcut icon" href="favicon.ico" />
 	<link rel="stylesheet" href="css/style.css" />
+	<link href="https://fonts.googleapis.com/css?family=Inconsolata|Merriweather" rel="stylesheet">
 </head>
