--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,10 @@
 .header {
-	font-family: monospace;
+	font-family: 'Inconsolata', monospace;
 	width: 100%;
 	text-align: center;
 }
 .main-title {
+	font-family: 'Merriweather', serif;
 	width: 100%;
 }
 .link {
@@ -17,11 +18,13 @@
 .link:hover > .link-descr {
 	visibility: visible;
 }
-
 .horiz-eq {
 	display:block;
 	background-image:url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' version='1.1' height='10pt' width='5pt'><text x='0' y='10' fill='black' font-size='10'>=</text></svg>");
 	background-repeat: repeat-x;
 	height:2em;
 	width: 100%;
+}
+.page {
+	font-family: 'Inconsolata', monospace;
 }
