--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,12 +2,13 @@
 	<div class="main-title">The cave of Daniel the Gray</div>
 	(nothing to hack here)
 	<hr/>
+
 	<div class="link">
 		<a href="cv">$ whoami</a><br/>
 		<span class="link-descr">Info about the owner of the cave</span>
 	</div>
 	<div class="link">
-		<a href="cv">$ koans</a><br/>
+		<a href="koans">$ koans</a><br/>
 		<span class="link-descr">Sabiduría de Master Foo! (español)</span>
 	</div>
 	<div class="horiz-eq"></div>
