--- a/css/style.css
+++ b/css/style.css
@@ -3,11 +3,15 @@
 	width: 100%;
 	text-align: center;
 }
+h1,h2,h3,h4,h5,h6 {
+	font-family: 'Merriweather', serif;
+}
 .main-title {
 	font-family: 'Merriweather', serif;
 	width: 100%;
 }
 .link {
+	text-align: left;
 	color: green;
 	float: left;
 	text-decoration:none;
@@ -19,7 +23,7 @@
 	visibility: visible;
 }
 .horiz-eq {
-	display:block;
+	display: inline-block;
 	background-image:url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' version='1.1' height='10pt' width='5pt'><text x='0' y='10' fill='black' font-size='10'>=</text></svg>");
 	background-repeat: repeat-x;
 	height:2em;
