--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,7 +4,7 @@
 	<meta name="author" content="Daniel Gray" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>The Cave of Daniel the Gray</title>
-	<link rel="shortcut icon" href="favicon.ico" />
-	<link rel="stylesheet" href="css/style.css" />
+	<link rel="shortcut icon" href="/favicon.ico" />
+	<link rel="stylesheet" href="/css/style.css" />
 	<link href="https://fonts.googleapis.com/css?family=Inconsolata|Merriweather" rel="stylesheet">
 </head>
