--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,11 +4,11 @@
 	<hr/>
 
 	<div class="link">
-		<a href="cv">$ whoami</a><br/>
+		<a href="/cv">$ whoami</a><br/>
 		<span class="link-descr">Info about the owner of the cave</span>
 	</div>
 	<div class="link">
-		<a href="koans">$ koans</a><br/>
+		<a href="/koans">$ koans</a><br/>
 		<span class="link-descr">Sabiduría de Master Foo! (español)</span>
 	</div>
 	<div class="horiz-eq"></div>
