--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,7 @@ h1,h2,h3,h4,h5,h6 {
 }
 .horiz-eq {
 	display: inline-block;
-	background-image:url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' version='1.1' height='10pt' width='5pt'><text x='0' y='10' fill='black' font-size='10'>=</text></svg>");
+	background-image:url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' version='1.1' height='10pt' width='7pt'><text x='0' y='10' fill='#eaeaea' font-size='15'>=</text></svg>");
 	background-repeat: repeat-x;
 	height:2em;
 	width: 100%;
