Refactor the separators

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <div class="header">
 	<div class="main-title">The cave of Daniel the Gray</div>
 	(nothing to hack here)
-	<hr/>
+	<div class="sep back-dash"></div>
 
 	<div class="link">
 		<a href="/cv">$ whoami</a><br/>
@@ -11,5 +11,5 @@
 		<a href="/koans">$ koans</a><br/>
 		<span class="link-descr">Sabiduría de Master Foo! (español)</span>
 	</div>
-	<div class="horiz-eq"></div>
+	<div class="sep back-eq"></div>
 </div>
