--- a/css/style.css
+++ b/css/style.css
@@ -26,12 +26,17 @@ h1,h2,h3,h4,h5,h6 {
 .link:hover > .link-descr {
 	visibility: visible;
 }
-.horiz-eq {
+.sep {
 	display: inline-block;
-	background-image:url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' version='1.1' height='10pt' width='7pt'><text x='0' y='10' fill='#eaeaea' font-size='15'>=</text></svg>");
 	background-repeat: repeat-x;
-	height:2em;
+	height:1em;
 	width: 100%;
+}
+.back-eq {
+	background-image:url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' version='1.1' height='10pt' width='7pt'><text x='0' y='10' fill='#eaeaea' font-size='15'>=</text></svg>");
+}
+.back-dash {
+	background-image:url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' version='1.1' height='10pt' width='7pt'><text x='0' y='10' fill='#eaeaea' font-size='15'>-</text></svg>");
 }
 .page {
 	font-family: 'Inconsolata', monospace;
