--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,4 +7,5 @@
 	<link rel="shortcut icon" href="/favicon.ico" />
 	<link rel="stylesheet" href="/css/style.css" />
 	<link href="https://fonts.googleapis.com/css?family=Inconsolata|Merriweather" rel="stylesheet">
+	{{ custom_head }}
 </head>
