Add correct parameter passing

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,5 @@
 <html>
-	{% include head.html %}
+	{% include head.html custom_head=page.custom_head %}
 	<body>
 		{% include header.html %}
 		<div class="page">
