Try to add typing text animation to link subtext

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,6 +6,9 @@
 	<title>The Cave of Daniel the Gray</title>
 	<link rel="shortcut icon" href="/favicon.ico" />
 	<link rel="stylesheet" href="/css/style.css" />
+	<noscript>
+		<link rel="stylesheet" href="/css/noscript.css" />
+	</noscript>
 	<link href="https://fonts.googleapis.com/css?family=Inconsolata|Merriweather" rel="stylesheet">
 	{{ include.custom_head }}
 </head>
