--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,5 +10,6 @@
 		<link rel="stylesheet" href="/css/noscript.css" />
 	</noscript>
 	<link href="https://fonts.googleapis.com/css?family=Inconsolata|Merriweather" rel="stylesheet">
+	<script src="js/gray.js"></script>
 	{{ include.custom_head }}
 </head>
