Correct layout - take 2

--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,9 @@ a:visited {
 	color: green;
 	float: left;
 	text-decoration:none;
+	overflow-y: hidden;
+	height: 3em;
+	width: 33%;
 }
 .link-descr {
 	visibility: hidden;
