--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,14 +4,12 @@
 	<div class="sep back-dash"></div>
 
 	<div class="link">
-		<a href="/cv">$ whoami</a><br/>
+		<a href="/cv">$ whoami</a>
 		<span class="link-descr">Info about the owner of the cave</span>
-		<br/>
 	</div>
 	<div class="link">
-		<a href="/koans">$ koans</a><br/>
+		<a href="/koans">$ koans</a>
 		<span class="link-descr">Sabiduría de Master Foo! (español)</span>
-		<br/>
 	</div>
 	<div class="sep back-eq"></div>
 </div>
